Button alignment fixes

--- a/css/base.css
+++ b/css/base.css
@@ -152,3 +152,6 @@ p:empty {
 	max-width: 100%;
 	max-height: 64rem;
 }
+span.small {
+  color: var(--subtext0);
+}
